--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -4,7 +4,7 @@ build:
 loans:
   message: "Welcome to EazyBank loans related production APIs..."
   contactDetails:
-    name: "Reine Aishwarya - Product Owner"
+    name: "Reine Aishwarya - Product Owner -- 1"
     email: "aishwarya@eazybank.com"
   onCallSupport:
     - (453) 392-4829
